Add missing blog posts and new SVG portrait;
TODO:
- SVG to PNG
- SVG icons for socials
- Footer
- Export header SVGs from Figma
- Search input field button
- Mobile layouts

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
             <h4 class="blog-card-tag-red">Technology</h4>
             <h3 class="blog-card-title"><em>Hotwire</em> Handbook, Part 2</h3>
             <p class="blog-card-snippet">
-              Part two of the Hotwire Handbook. A detailed dive into pagination
-              with Hotwire. An extension to the...
+              Part Two of the Hotwire Handbook. A detailed dive into pagination
+              with Hotwire. An extension to the excellent guide by David Colby.
             </p>
             <ul class="blog-card-details">
               <li><a class="btn btn-primary" href="#">Read More</a></li>
@@ -185,7 +185,9 @@
             <h4 class="blog-card-tag-blue">Concepts</h4>
             <h3 class="blog-card-title"><em>Upgrade</em> or Rebuild?</h3>
             <p class="blog-card-snippet">
-              It’s a question that many developers face.
+              It’s a question that many developers face. Maintenance takes a
+              back seat to "urgent" new features, and before you know it your
+              dependencies are way out of date.
             </p>
             <ul class="blog-card-details">
               <li><a class="btn btn-primary" href="#">Read More</a></li>
@@ -201,6 +203,90 @@
                   <li>
                     <div class="blog-card-author">Phil</div>
                     <div class="blog-card-date">October 13, 2022</div>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </article>
+          <article class="blog-card blog-card-sm">
+            <h4 class="blog-card-tag-red">Technology</h4>
+            <h3 class="blog-card-title">
+              <em>Admin Authorisation</em> at Ryalto
+            </h3>
+            <p class="blog-card-snippet">
+              We're working on a better way to manage the relationship between
+              users and organisations. This post it about our simple approach to
+              admin users.
+            </p>
+            <ul class="blog-card-details">
+              <li><a class="btn btn-primary" href="#">Read More</a></li>
+              <li>
+                <ul class="blog-card-authored-info">
+                  <li>
+                    <img
+                      class="blog-card-portrait"
+                      src="/assets/img/avatars/phil.png"
+                      alt=""
+                    />
+                  </li>
+                  <li>
+                    <div class="blog-card-author">Phil</div>
+                    <div class="blog-card-date">October 13, 2022</div>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </article>
+          <article class="blog-card blog-card-sm">
+            <h4 class="blog-card-tag-red">Technology</h4>
+            <h3 class="blog-card-title"><em>Hotwire</em> Handbook, Part 1</h3>
+            <p class="blog-card-snippet">
+              A guide that covers a range of Hotwire use cases with examples.
+              This part covers Toggle Buttons, Content Updates and Live
+              Counters.
+            </p>
+            <ul class="blog-card-details">
+              <li><a class="btn btn-primary" href="#">Read More</a></li>
+              <li>
+                <ul class="blog-card-authored-info">
+                  <li>
+                    <img
+                      class="blog-card-portrait"
+                      src="/assets/img/avatars/phil.png"
+                      alt=""
+                    />
+                  </li>
+                  <li>
+                    <div class="blog-card-author">Phil</div>
+                    <div class="blog-card-date">October 13, 2022</div>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </article>
+          <article class="blog-card blog-card-sm">
+            <h4 class="blog-card-tag-red">Technology</h4>
+            <h3 class="blog-card-title">
+              Simple <em>JavaScript</em> Theme Toggle
+            </h3>
+            <p class="blog-card-snippet">
+              A guide on how to implement a simple toggle between dark and light
+              mode.
+            </p>
+            <ul class="blog-card-details">
+              <li><a class="btn btn-primary" href="#">Read More</a></li>
+              <li>
+                <ul class="blog-card-authored-info">
+                  <li>
+                    <img
+                      class="blog-card-portrait bg-purple"
+                      src="/assets/img/avatars/koto.svg"
+                      alt=""
+                    />
+                  </li>
+                  <li>
+                    <div class="blog-card-author">Koto</div>
+                    <div class="blog-card-date">May 20, 2021</div>
                   </li>
                 </ul>
               </li>
