Add proper footer structure

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img
               class="nav-main-logo"
               src="/assets/img/logo/ryalto-logo-lg.png"
-              alt="Ryalto Logo"
+              alt="Ryalto Group Logo"
             />
           </li>
           <li class="nav-main-logo-text">Developer Page</li>
@@ -313,9 +313,13 @@
     </article>
     <footer>
       <div class="content-wrapper">
-        <ul>
+        <ul class="footer-links-container">
           <li>
-            <img src="" alt="" />
+            <img
+              class="footer-logo"
+              src="/assets/img/logo/ryalto-logo-lg.png"
+              alt="Ryalto Group Logo"
+            />
             <p>© 2023 Ryalto Group</p>
           </li>
           <li>
@@ -327,7 +331,7 @@
             </ul>
           </li>
           <li>
-            <nav>
+            <nav class="footer-sitemap">
               <a href="#">Home</a> <a href="#">About</a> <a href="#">Careers</a>
               <a href="#">Meet the Team</a>
             </nav>
