Add SVGs for social links; fix blog card styling to make full cards clickable

--- a/index.html
+++ b/index.html
@@ -59,10 +59,26 @@
           offer on our website:
         </p>
         <ul class="social-links-list-lg">
-          <li><a href="#">GitHub</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">LinkedIn</a></li>
-          <li><a href="#">Website</a></li>
+          <li>
+            <a href="#"
+              ><img src="/assets/svg/icons/github.svg" alt="GitHub"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="/assets/svg/icons/twitter.svg" alt="Twitter"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="/assets/svg/icons/linkedin.svg" alt="LinkedIn"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="/assets/svg/icons/web.svg" alt="Ryalto Group Website"
+            /></a>
+          </li>
         </ul>
       </div>
     </article>
@@ -70,7 +86,7 @@
       <div class="content-wrapper">
         <h2>Our <em>blog</em></h2>
         <section class="blog-cards-container">
-          <article class="blog-card blog-card-lg-img">
+          <a href="#" class="blog-card blog-card-lg-img">
             <img
               class="blog-card-img"
               src="/assets/img/blog/blog-image-01.png"
@@ -85,7 +101,7 @@
               actions for Rails CI.
             </p>
             <ul class="blog-card-details">
-              <li><a class="btn btn-primary" href="#">Read More</a></li>
+              <li class="btn btn-primary">Read More</li>
               <li>
                 <ul class="blog-card-authored-info">
                   <li>
@@ -102,8 +118,9 @@
                 </ul>
               </li>
             </ul>
-          </article>
-          <article class="blog-card blog-card-sm">
+          </a>
+
+          <a href="#" class="blog-card blog-card-sm">
             <h4 class="blog-card-tag-blue">Concepts</h4>
             <h3 class="blog-card-title">Our Engineering <em>Principles</em></h3>
             <p class="blog-card-snippet">
@@ -111,7 +128,7 @@
               Ryalto.
             </p>
             <ul class="blog-card-details">
-              <li><a class="btn btn-primary" href="#">Read More</a></li>
+              <li class="btn btn-primary">Read More</li>
               <li>
                 <ul class="blog-card-authored-info">
                   <li>
@@ -128,8 +145,8 @@
                 </ul>
               </li>
             </ul>
-          </article>
-          <article class="blog-card blog-card-sm">
+          </a>
+          <a href="#" class="blog-card blog-card-sm">
             <h4 class="blog-card-tag-red">Technology</h4>
             <h3 class="blog-card-title">Getting into <em>Ruby on Rails</em></h3>
             <p class="blog-card-snippet">
@@ -137,7 +154,7 @@
               I thought I’d write up my response here.
             </p>
             <ul class="blog-card-details">
-              <li><a class="btn btn-primary" href="#">Read More</a></li>
+              <li class="btn btn-primary">Read More</li>
               <li>
                 <ul class="blog-card-authored-info">
                   <li>
@@ -154,8 +171,8 @@
                 </ul>
               </li>
             </ul>
-          </article>
-          <article class="blog-card blog-card-sm">
+          </a>
+          <a href="#" class="blog-card blog-card-sm">
             <h4 class="blog-card-tag-red">Technology</h4>
             <h3 class="blog-card-title"><em>Hotwire</em> Handbook, Part 2</h3>
             <p class="blog-card-snippet">
@@ -163,7 +180,7 @@
               with Hotwire. An extension to the excellent guide by David Colby.
             </p>
             <ul class="blog-card-details">
-              <li><a class="btn btn-primary" href="#">Read More</a></li>
+              <li class="btn btn-primary">Read More</li>
               <li>
                 <ul class="blog-card-authored-info">
                   <li>
@@ -180,8 +197,8 @@
                 </ul>
               </li>
             </ul>
-          </article>
-          <article class="blog-card blog-card-sm">
+          </a>
+          <a href="#" class="blog-card blog-card-sm">
             <h4 class="blog-card-tag-blue">Concepts</h4>
             <h3 class="blog-card-title"><em>Upgrade</em> or Rebuild?</h3>
             <p class="blog-card-snippet">
@@ -190,7 +207,7 @@
               dependencies are way out of date.
             </p>
             <ul class="blog-card-details">
-              <li><a class="btn btn-primary" href="#">Read More</a></li>
+              <li class="btn btn-primary">Read More</li>
               <li>
                 <ul class="blog-card-authored-info">
                   <li>
@@ -207,8 +224,8 @@
                 </ul>
               </li>
             </ul>
-          </article>
-          <article class="blog-card blog-card-sm">
+          </a>
+          <a href="#" class="blog-card blog-card-sm">
             <h4 class="blog-card-tag-red">Technology</h4>
             <h3 class="blog-card-title">
               <em>Admin Authorisation</em> at Ryalto
@@ -219,7 +236,7 @@
               admin users.
             </p>
             <ul class="blog-card-details">
-              <li><a class="btn btn-primary" href="#">Read More</a></li>
+              <li class="btn btn-primary">Read More</li>
               <li>
                 <ul class="blog-card-authored-info">
                   <li>
@@ -236,8 +253,8 @@
                 </ul>
               </li>
             </ul>
-          </article>
-          <article class="blog-card blog-card-sm">
+          </a>
+          <a href="#" class="blog-card blog-card-sm">
             <h4 class="blog-card-tag-red">Technology</h4>
             <h3 class="blog-card-title"><em>Hotwire</em> Handbook, Part 1</h3>
             <p class="blog-card-snippet">
@@ -246,7 +263,7 @@
               Counters.
             </p>
             <ul class="blog-card-details">
-              <li><a class="btn btn-primary" href="#">Read More</a></li>
+              <li class="btn btn-primary">Read More</li>
               <li>
                 <ul class="blog-card-authored-info">
                   <li>
@@ -263,8 +280,8 @@
                 </ul>
               </li>
             </ul>
-          </article>
-          <article class="blog-card blog-card-sm">
+          </a>
+          <a href="#" class="blog-card blog-card-sm">
             <h4 class="blog-card-tag-red">Technology</h4>
             <h3 class="blog-card-title">
               Simple <em>JavaScript</em> Theme Toggle
@@ -274,7 +291,7 @@
               mode.
             </p>
             <ul class="blog-card-details">
-              <li><a class="btn btn-primary" href="#">Read More</a></li>
+              <li class="btn btn-primary">Read More</li>
               <li>
                 <ul class="blog-card-authored-info">
                   <li>
@@ -291,7 +308,7 @@
                 </ul>
               </li>
             </ul>
-          </article>
+          </a>
         </section>
         <section class="blog-navigation">
           <ul class="blog-pagination">
