Fix SVGs to apply dynamic fill; add SVG hover effects

--- a/index.html
+++ b/index.html
@@ -61,23 +61,55 @@
         <ul class="social-links-list-lg">
           <li>
             <a href="#"
-              ><img src="/assets/svg/icons/github.svg" alt="GitHub"
-            /></a>
+              ><svg
+                class="social-link-lg"
+                width="120"
+                height="120"
+                viewBox="0 0 120 120"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="/assets/svg/icons/github.svg#path"></use>
+              </svg>
+            </a>
           </li>
           <li>
             <a href="#"
-              ><img src="/assets/svg/icons/twitter.svg" alt="Twitter"
-            /></a>
+              ><svg
+                class="social-link-lg"
+                width="120"
+                height="120"
+                viewBox="0 0 120 120"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="/assets/svg/icons/twitter.svg#path"></use>
+              </svg>
+            </a>
           </li>
           <li>
             <a href="#"
-              ><img src="/assets/svg/icons/linkedin.svg" alt="LinkedIn"
-            /></a>
+              ><svg
+                class="social-link-lg"
+                width="120"
+                height="120"
+                viewBox="0 0 120 120"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="/assets/svg/icons/linkedin.svg#path"></use>
+              </svg>
+            </a>
           </li>
           <li>
             <a href="#"
-              ><img src="/assets/svg/icons/web.svg" alt="Ryalto Group Website"
-            /></a>
+              ><svg
+                class="social-link-lg"
+                width="120"
+                height="120"
+                viewBox="0 0 120 120"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="/assets/svg/icons/web.svg#path"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
@@ -340,11 +372,59 @@
             <p>© 2023 Ryalto Group</p>
           </li>
           <li>
-            <ul>
-              <li>GitHub</li>
-              <li>Twitter</li>
-              <li>LinkedIn</li>
-              <li>Website</li>
+            <ul class="social-links-list-sm">
+              <li>
+                <a href="#">
+                  <svg
+                    class="social-link-sm"
+                    width="120"
+                    height="120"
+                    viewBox="0 0 120 120"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <use href="/assets/svg/icons/github.svg#path"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#"
+                  ><svg
+                    class="social-link-sm"
+                    width="120"
+                    height="120"
+                    viewBox="0 0 120 120"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <use href="/assets/svg/icons/twitter.svg#path"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#"
+                  ><svg
+                    class="social-link-sm"
+                    width="120"
+                    height="120"
+                    viewBox="0 0 120 120"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <use href="/assets/svg/icons/linkedin.svg#path"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg
+                    class="social-link-sm"
+                    width="120"
+                    height="120"
+                    viewBox="0 0 120 120"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <use href="/assets/svg/icons/web.svg#path"></use>
+                  </svg>
+                </a>
+              </li>
             </ul>
           </li>
           <li>
