Pagination SVG + styles

--- a/index.html
+++ b/index.html
@@ -344,11 +344,39 @@
         </section>
         <section class="blog-navigation">
           <ul class="blog-pagination">
-            <li><a class="btn-pagination" href="#">Prev</a></li>
-            <li><a class="btn-pagination active" href="#">1</a></li>
-            <li><a class="btn-pagination" href="#">2</a></li>
-            <li><a class="btn-pagination" href="#">3</a></li>
-            <li><a class="btn-pagination" href="#">Next</a></li>
+            <li>
+              <a class="btn-pagination" href="#">
+                <svg
+                  width="15"
+                  height="24"
+                  viewBox="0 0 15 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <use href="/assets/svg/icons/arrow-l.svg#path"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="btn-pagination active" href="#"><span>1</span></a>
+            </li>
+            <li>
+              <a class="btn-pagination" href="#"><span>2</span></a>
+            </li>
+            <li>
+              <a class="btn-pagination" href="#"><span>3</span></a>
+            </li>
+            <li>
+              <a class="btn-pagination" href="#">
+                <svg
+                  width="15"
+                  height="24"
+                  viewBox="0 0 15 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <use href="/assets/svg/icons/arrow-r.svg#path"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
           <input
             class="blog-search-area"
