Add SVG background graphics

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
       </nav>
       <section class="intro-component">
         <div class="content-wrapper">
+          <img
+            class="intro-bg-image"
+            src="/assets/svg/bg/header-bg.svg"
+            alt=""
+          />
           <h1>We are <em>Ryalto.</em></h1>
           <p class="body-text-lg">Welcome to our Developer Page!</p>
           <p class="body-text-lg">
