Implement search field

--- a/index.html
+++ b/index.html
@@ -383,13 +383,18 @@
               </a>
             </li>
           </ul>
-          <input
-            class="blog-search-area"
-            type="text"
-            name="search"
-            id="search"
-            placeholder="Enter keywords to search"
-          />
+          <form class="blog-search" action="">
+            <input
+              class="blog-search-area"
+              type="text"
+              name="search"
+              id="search"
+              placeholder="Enter keywords to search"
+            />
+            <button class="btn btn-primary btn-search">
+              <img src="/assets/svg/icons/search.svg" alt="Search" />
+            </button>
+          </form>
         </section>
       </div>
     </article>
