Add basic mobile menu structure; start media query optimization

--- a/index.html
+++ b/index.html
@@ -473,6 +473,14 @@
           </li>
         </ul>
       </div>
+      <article class="nav-mobile-component">
+        <ul class="nav-mobile-links-list">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Search</a></li>
+        </ul>
+      </article>
     </footer>
   </body>
 </html>
