Update mobile nav with SVG icons

--- a/index.html
+++ b/index.html
@@ -475,10 +475,22 @@
       </div>
       <article class="nav-mobile-component">
         <ul class="nav-mobile-links-list">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">Team</a></li>
-          <li><a href="#">Search</a></li>
+          <li class="nav-mobile-link active">
+            <a href="#"><img src="/assets/svg/icons/home.svg" alt="Home" /></a>
+          </li>
+          <li class="nav-mobile-link">
+            <a href="#"
+              ><img src="/assets/svg/icons/careers.svg" alt="Careers"
+            /></a>
+          </li>
+          <li class="nav-mobile-link">
+            <a href="#"><img src="/assets/svg/icons/team.svg" alt="Team" /></a>
+          </li>
+          <li class="nav-mobile-link">
+            <a href="#"
+              ><img src="/assets/svg/icons/search.svg" alt="Search"
+            /></a>
+          </li>
         </ul>
       </article>
     </footer>
