--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
             <a href="#"><img src="/assets/svg/icons/team.svg" alt="Team" /></a>
           </li>
           <li class="nav-mobile-link">
-            <a href="#"
+            <a href="#" class="btn btn-primary btn-mobile-nav"
               ><img src="/assets/svg/icons/search.svg" alt="Search"
             /></a>
           </li>
